Performance-Verbesserungen, auf ComboPooledDataSource umgestellt

--- a/src/main/webapp/errorpages/404.xhtml
+++ b/src/main/webapp/errorpages/404.xhtml
@@ -23,9 +23,23 @@
   -->
 <ui:composition template="/templates/errorpage.xhtml" xmlns="http://www.w3.org/1999/xhtml"
 xmlns:ui="http://java.sun.com/jsf/facelets">
-  <ui:define name="header_text">
-    <script type="text/javascript">jQuery.ajaxSetup({ error: handleXhrError }); function
-    handleXhrError(xhr){}</script>
-    <span class="error">You got a RuntimeException! There's a BUG somewhere!</span>
-  </ui:define>
+ <!-- ************************************************************************ -->
+ <ui:define name="header_text">
+  <script type="text/javascript">
+  <!-- * -->
+  jQuery.ajaxSetup({ error: handleXhrError });
+  <!-- * -->
+  function handleXhrError(xhr){}
+  <!-- * --></script>
+  <span class="error">404</span>
+ </ui:define>
+ <!-- ************************************************************************ -->
+ <ui:define name="errorContent">
+  <div id="page-not-found-container">
+   <span id="page-not-found-title">404</span>
+   <br />
+   <span id="page-not-found-text">#{txt['ERROR.404']}</span>
+  </div>
+ </ui:define>
+ <!-- ************************************************************************ -->
 </ui:composition>
